# ModernFractalViewer

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ReleaseNotes.md  build-android.cmd
.claude/skills/add-fractal/: SKILL.md
.claude/skills/add-uniform/: SKILL.md
.claude/skills/check-all/: SKILL.md
.claude/skills/investigate/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: build-android.yml  build-pc.yml  build-web.yml  release.yml  test.yml
android/: build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: colors.xml  strings.xml
crates/fractal-app/: Cargo.toml  build.rs  index.html
crates/fractal-app/src/: android_export.rs  app.rs  config_manager.rs  hot_reload.rs  input.rs  lib.rs  log_capture.rs  main.rs  session_manager.rs
crates/fractal-core/: Cargo.toml
crates/fractal-core/src/: benchmark_types.rs  camera.rs  lib.rs  sdf.rs  session.rs
crates/fractal-core/src/fractals/: mandelbulb.rs  menger.rs  mod.rs
crates/fractal-core/src/mesh/: decimation.rs  dual_contouring.rs  gltf_export.rs  marching_cubes.rs  mc_tables.rs  mod.rs  obj_export.rs  palette.rs  ply_export.rs  qef.rs  smoothing.rs  surface_nets.rs
crates/fractal-renderer/: Cargo.toml
crates/fractal-renderer/benches/: render_bench.rs
crates/fractal-renderer/shaders/: raymarcher.wgsl  sdf_common.wgsl  sdf_volume.wgsl
crates/fractal-renderer/src/: benchmark.rs  compute.rs  context.rs  lib.rs  pipeline.rs  thumbnail.rs  uniforms.rs
crates/fractal-renderer/tests/: snapshot_tests.rs
crates/fractal-renderer/tests/golden/: test_apollonian_default.raw  test_color_mode_iteration.raw  test_color_mode_normal.raw  test_julia_default.raw  test_mandelbox_default.raw  test_mandelbulb_default.raw  test_menger_default.raw  test_sierpinski_default.raw
crates/fractal-ui/: Cargo.toml
crates/fractal-ui/src/: app_settings.rs  control_ranges.rs  default_app_settings.toml  default_control_ranges.toml  lib.rs  state.rs
crates/fractal-ui/src/panels/: benchmark_panel.rs  camera_controls.rs  color_settings.rs  control_ranges_panel.rs  control_settings_panel.rs  export_panel.rs  fractal_params.rs  mod.rs  session_panel.rs
docs/: DEVELOPMENT_GUIDE.md  TESTING.md  TUTORIAL.md  USER_GUIDE.md
docs/technical/: adaptive-iso-level.md  mesh-decimation.md  mesh-smoothing.md  obj-ply-export.md  vertex-deduplication.md
plans/: dual-contouring-implementation.md  fractal-viewer-architecture.md  gltf-pbr-material-export.md  rendering-benchmark.md  surface-nets-and-dc-improvements.md
scripts/: update-icons.cmd
web/: index.html
