[workspace]
resolver = "2"
members = [
    "crates/fractal-core",
    "crates/fractal-renderer", 
    "crates/fractal-ui",
    "crates/fractal-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["jiamingfeng"]
license = "MIT"
repository = "https://github.com/jiamingfeng/ModernFractalViewer"

[workspace.dependencies]
# Graphics
wgpu = "24"
winit = "0.30"

# UI
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"

# Math
glam = { version = "0.29", features = ["bytemuck", "serde"] }

# Utilities
bytemuck = { version = "1.21", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
thiserror = "2"

# Async
tokio = { version = "1", features = ["rt", "macros"] }

# Serialization (for presets)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internal crates
fractal-core = { path = "crates/fractal-core" }
fractal-renderer = { path = "crates/fractal-renderer" }
fractal-ui = { path = "crates/fractal-ui" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
