[package]
name = "fractal-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "fractal-viewer"
path = "src/main.rs"

[lib]
name = "fractal_app"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[dependencies]
fractal-core.workspace = true
fractal-renderer.workspace = true
fractal-ui.workspace = true

wgpu.workspace = true
winit.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
glam.workspace = true
bytemuck.workspace = true
pollster.workspace = true
log.workspace = true
env_logger.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { workspace = true, features = ["clipboard", "links", "wayland", "x11"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { workspace = true, features = ["links"] }
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
web-time = "1"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"
