[package]
name = "fractal-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "fractal-viewer"

[[bin]]
name = "fractal-viewer"
path = "src/main.rs"

[[bin]]
name = "fractal-bench"
path = "src/bin/bench.rs"
required-features = ["benchmark"]

[lib]
name = "fractal_app"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[dependencies]
fractal-core.workspace = true
fractal-renderer.workspace = true
fractal-ui.workspace = true

wgpu.workspace = true
winit.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
glam.workspace = true
bytemuck.workspace = true
pollster.workspace = true
log.workspace = true
env_logger.workspace = true
serde_json.workspace = true
toml.workspace = true
base64.workspace = true
uuid.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4", features = ["derive"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { workspace = true, features = ["clipboard", "links", "wayland", "x11"] }
dirs.workspace = true

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
rfd.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { workspace = true, features = ["links"] }
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "Storage"] }
web-time = "1"

[features]
hot-reload = ["fractal-renderer/hot-reload"]
benchmark = ["dep:clap"]

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"
jni = { version = "0.21", default-features = false }
ndk-context = "0.1"
