[package]
name = "fractal-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
glam.workspace = true
bytemuck.workspace = true
serde.workspace = true
gltf-json.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
