[package]
name = "fractal-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fractal-core.workspace = true
wgpu.workspace = true
winit.workspace = true
bytemuck.workspace = true
glam.workspace = true
log.workspace = true
thiserror.workspace = true
pollster.workspace = true

[features]
snapshot-tests = []
hot-reload = []

[dev-dependencies]
fractal-core.workspace = true
pollster.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render_bench"
harness = false
